syntax="proto3";

package promocodes;

option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/api/protos/promocodes";

message GetUserPromoCodesRequest {
  uint32 user_id = 1;
}

message PromoCode {
  uint32 id = 1;
  uint32 user_id = 2;
  string name = 3;
  uint32 bonus = 4;
}

message GetUserPromoCodesResponse {
  repeated PromoCode promocodes = 1;
}